# advent-of-code-2016

./: Cargo.toml
advent-of-code/: Cargo.toml
advent-of-code/src/: lib.rs
advent-of-code/src/env/: project.rs
advent-of-code/src/puzzles/: mod.rs  puzzle.rs  puzzle_error.rs  puzzle_solver.rs  solution_progress.rs  solution_progress_bar.rs  solution_progress_bar_thread.rs  solution_progress_thread.rs
advent-of-code/tests/puzzles/: mod.rs  puzzle_tests.rs  test_puzzle_solver.rs  text_reader_tests.rs
advent-of-code/tests/resources/: input_invalid.txt
common/: Cargo.toml
common/src/: lib.rs
common/src/env/: project.rs
common/src/reader/: mod.rs  text_parser.rs  text_reader.rs  text_reader_error.rs
common/tests/reader/: mod.rs  reader_tests.rs  simple_parser.rs
common/tests/resources/: input_invalid.txt
day_01_no_time_for_a_taxicab/: Cargo.toml
day_01_no_time_for_a_taxicab/src/: main.rs
day_01_no_time_for_a_taxicab/src/puzzle/: action.rs  city.rs  direction.rs  document.rs  instruction.rs  mod.rs  parser.rs  position.rs  puzzle_parser.rs  solution.rs  (+1 more)
day_02_bathroom_security/: Cargo.toml
day_03_squares_with_three_sides/: Cargo.toml
day_04_security_through_obscurity/: Cargo.toml
day_05_how_about_a_nice_game_of_chess/: Cargo.toml
day_05_how_about_a_nice_game_of_chess/src/: main.rs
day_06_signals_and_noise/: Cargo.toml
day_07_internet_protocol_version_7/: Cargo.toml
day_08_twofactor_authentication/: Cargo.toml
day_09_explosives_in_cyberspace/: Cargo.toml
day_10_balance_bots/: Cargo.toml
day_6_signals_and_noise/: Cargo.toml
(+74 files in other folders)
